OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/nviz.h


/* data structures */
typedef struct
{
    int id;
    float brt;
    float r, g, b;
    float ar, ag, ab;		/* ambient rgb */
    float x, y, z, w;		/* position */
} light_data;


struct fringe_data
{
    int           id;
    unsigned long color;
    float         elev;
    int           where[4];
};


typedef struct
{
    /* ranges */
    float zrange, xyrange;

    /* cplanes */
    int num_cplanes;
    int cur_cplane, cp_on[MAX_CPLANES];
    float cp_trans[MAX_CPLANES][3];
    float cp_rot[MAX_CPLANES][3];

    /* light */
    light_data light[MAX_LIGHTS];
    
    /* fringe */
    int num_fringes;
    struct fringe_data **fringe;
    
    /* background color */
    int bgcolor;

} nv_data;


/* change_view.c */
int Nviz_resize_window(int, int);

int Nviz_update_ranges(nv_data *);

int Nviz_set_viewpoint_position(double, double);

int Nviz_set_viewpoint_height(double);

int Nviz_set_viewpoint_persp(int);

int Nviz_set_viewpoint_twist(int);

int Nviz_change_exag(nv_data *, double);


/* cplanes_obj.c */
int Nviz_new_cplane(nv_data *, int);

int Nviz_off_cplane(nv_data *, int);

int Nviz_draw_cplane(nv_data *, int, int);


/* draw.c */
int Nviz_draw_all_surf(nv_data *);

int Nviz_draw_all_vect();

int Nviz_draw_all_site();

int Nviz_draw_all_vol();

int Nviz_draw_all(nv_data *);

int Nviz_draw_quick(nv_data *, int);


/* exag.c */
int Nviz_get_exag_height(double *, double *, double *);

double Nviz_get_exag();


/* lights.c */
int Nviz_set_light_position(nv_data *, int, double, double, double, double);

int Nviz_set_light_bright(nv_data *, int, double);

int Nviz_set_light_color(nv_data *, int, int, int, int);

int Nviz_set_light_ambient(nv_data *, int, double);

int Nviz_init_light(nv_data *, int);